--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,1 @@
-alembic==1.4.3
-aiofiles==0.6.0
-aiohttp==3.7.2
-fastapi==0.61.2
-instaloader==4.5.3
-psycopg2==2.8.6
-sqlalchemy==1.3.20
-sqlalchemy-utils==0.36.8
+fastapi~=0.63
