--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
+alembic~=1.5
 aiofiles~=0.6
 asyncpg~=0.22
 fastapi~=0.63
 instaloader~=4.6
+psycopg2~=2.8
 SQLAlchemy==1.4.0b3
+sqlalchemy-utils~=0.36
