--- a/web/package.json
+++ b/web/package.json
@@ -20,9 +20,9 @@
     "@angular/platform-browser": "~11.2.0",
     "@angular/platform-browser-dynamic": "~11.2.0",
     "@angular/router": "~11.2.0",
-    "@nebular/eva-icons": "7.0.0",
+    "@nebular/eva-icons": "^7.0.0",
     "@nebular/theme": "^7.0.0",
-    "eva-icons": "^1.1.2",
+    "eva-icons": "^1.1.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
