--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,6 @@ databases~=0.4
 fastapi~=0.63
 fastapi-utils~=0.2
 instaloader~=4.6
-psycopg2~=2.8
+psycopg2-binary~=2.8
 SQLAlchemy~=1.3
 sqlalchemy-utils~=0.36
