--- a/web/package.json
+++ b/web/package.json
@@ -23,6 +23,7 @@
     "@nebular/theme": "^10.0.0",
     "eva-icons": "^1.1.3",
     "ng-time-past-pipe": "^3.1.0",
+    "ngx-infinite-scroll": "^14.0.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
